...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                                <variation key="widthClass=compact" fixedFrame="YES">
                                    <rect key="frame" x="20" y="184" width="60" height="21"/>
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="15%" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dQb-zR-4hT">
                                <rect key="frame" x="87" y="66" width="391" height="30"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                <variation key="widthClass=compact" fixedFrame="YES">
                                    <rect key="frame" x="53" y="65" width="91" height="30"/>
...
